--- a/MarvelShowcase/index.html
+++ b/MarvelShowcase/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MARVEL SHOWCASE by kavya trivedi</title>
+    <title>MARVEL SHOWCASE by Kavya Trivedi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
